--- a/JobsOrderSystem/UserControls/Cars.resx
+++ b/JobsOrderSystem/UserControls/Cars.resx
@@ -176,4 +176,10 @@
         oI8lzlGqXI852BRTpXppU+yD/+Glwj+FkZLsMtAXoQAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="timerAnimate.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>29</value>
+  </metadata>
 </root>
