--- a/JobsOrderSystem/UserControls/SupplierInvoice.resx
+++ b/JobsOrderSystem/UserControls/SupplierInvoice.resx
@@ -176,4 +176,7 @@
         oI8lzlGqXI852BRTpXppU+yD/+Glwj+FkZLsMtAXoQAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="timerAnimate.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
