--- a/JobsOrderSystem/UserControls/MainMenu.resx
+++ b/JobsOrderSystem/UserControls/MainMenu.resx
@@ -276,4 +276,10 @@
         IE0zB2maOUjTzEGaZg7SNHOQppmDNM0cpGnmIE0zB2maKTx9+Q+au11x+OMSxAAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="Timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>143, 17</value>
+  </metadata>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>81</value>
+  </metadata>
 </root>
